[gd_scene load_steps=8 format=3 uid="uid://cn0cojw0yasyv"]

[ext_resource type="Script" path="res://Scripts/fighter.gd" id="1_257ni"]
[ext_resource type="Texture2D" uid="uid://cq731sfr1044k" path="res://Assets/player_idle.png" id="2_ejxq4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub06y"]
size = Vector2(162, 257)

[sub_resource type="SpriteFrames" id="SpriteFrames_e27fc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ejxq4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_w18on"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(200, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_sty3b"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pkli8"]
_data = {
"RESET": SubResource("Animation_sty3b"),
"attack": SubResource("Animation_w18on")
}

[node name="fighter" type="Node2D"]
script = ExtResource("1_257ni")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ub06y")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.05, 2.36364)
sprite_frames = SubResource("SpriteFrames_e27fc")
frame_progress = 0.54867

[node name="attach_point" type="Node2D" parent="."]
position = Vector2(106, -1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pkli8")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
